# HERoEHS-DIANA

diana_base_module/: CMakeLists.txt  package.xml
diana_base_module/include/diana_base_module/: base_module.h
diana_base_module/src/: base_module.cpp  base_module_state.cpp
diana_kinematics_dynamics/: CMakeLists.txt  package.xml
diana_kinematics_dynamics/include/diana_kinematics_dynamics/: kinematics_dynamics.h  kinematics_dynamics_define.h  link_data.h
diana_kinematics_dynamics/src/: kinematics_dynamics.cpp  link_data.cpp
diana_manager/: CMakeLists.txt  package.xml
diana_manager/config/: DIANA_SOCCER.robot  dxl_init.yaml  offset.yaml
diana_manager/launch/: diana_soccer_manager.launch  diana_soccer_manager_gazebo.launch
diana_manager/src/: diana_soccer_manager.cpp
diana_online_walking_module/: CMakeLists.txt  package.xml
diana_online_walking_module/include/diana_online_walking_module/: diana_online_walking.h  online_walking_module.h
diana_online_walking_module/src/: diana_online_walking.cpp  online_walking_module.cpp
